navbar on about page fixed z-index issue

--- a/imports/ui/styles/_app.scss
+++ b/imports/ui/styles/_app.scss
@@ -3,6 +3,7 @@
 *********************************/
 
 @import "{}/imports/ui/styles/pages/home.scss";
+@import "{}/imports/ui/styles/pages/about.scss";
 
 
 
@@ -13,6 +14,7 @@
 @import "{}/imports/ui/styles/components/video.scss";
 @import "{}/imports/ui/styles/components/nav.scss";
 @import "{}/imports/ui/styles/components/white.scss";
+@import "{}/imports/ui/styles/components/aboutWhite.scss";
 @import "{}/imports/ui/styles/components/black.scss";
 @import "{}/imports/ui/styles/components/sidebar.scss";
 @import "{}/imports/ui/styles/components/navWrapper.scss";
